--- a/packages/alarm/skill_device/control_code/tastierino estero/keypad.yaml
+++ b/packages/alarm/skill_device/control_code/tastierino estero/keypad.yaml
@@ -5,35 +5,35 @@ template:
 
   - trigger:
     - platform: template
-      value_template: >
+      value_template: >-
         {% from 'alarm.jinja' import state_alarm %}
-        {%set alarm = (state_alarm()|from_json)['alarm'] %}
-        {{ is_state(alarm,'arming')  and now() < states[alarm].last_changed+ timedelta(seconds=1)}}
+        {% set alarm = (state_alarm()|from_json)['alarm'] %}
+        {{ is_state(alarm, 'arming') and now() < states[alarm].last_changed + timedelta(seconds=1) }}
     - platform: template
-      value_template: >
+      value_template: >-
         {% from 'alarm.jinja' import state_alarm %}
-        {%set alarm = (state_alarm()|from_json)['alarm'] %}
-        {{ is_state(alarm,'triggered')  and now() < states[alarm].last_changed+ timedelta(seconds=1)}}
+        {% set alarm = (state_alarm()|from_json)['alarm'] %}
+        {{ is_state(alarm,'triggered') and now() < states[alarm].last_changed + timedelta(seconds=1) }}
     - platform: template
-      value_template: >
+      value_template: >-
         {% from 'alarm.jinja' import state_alarm %}
-        {%set alarm = (state_alarm()|from_json)['alarm'] %}
-        {{ is_state(alarm,'pending')  and now() < states[alarm].last_changed+ timedelta(seconds=1)}}
+        {% set alarm = (state_alarm()|from_json)['alarm'] %}
+        {{ is_state(alarm,'pending') and now() < states[alarm].last_changed + timedelta(seconds=1) }}
     - platform: state
       entity_id: button.confirmed_code_alarm_keypad
     sensor:
       - name: counter_code_error_keypad
-        state: >
+        state: >-
           {% from 'alarm.jinja' import state_alarm %}
           {% set code = (state_alarm()|from_json)['code'] %}
           {% set code_porta = (state_alarm()|from_json)['code_porta'] %}
             {% if trigger.entity_id == 'button.confirmed_code_alarm_keypad' and states('sensor.keypad_code')|int(0) == code|int(0) or states('sensor.keypad_code')|int(0) == code_porta|int(0) %}
               0
-            {% elif trigger.entity_id == 'button.confirmed_code_alarm_keypad' and not is_state('sensor.keypad_code','') and not is_state('sensor.keypad_code','unknown') and not is_state('sensor.keypad_code','unavailable') %}
+            {% elif trigger.entity_id == 'button.confirmed_code_alarm_keypad' and not is_state('sensor.keypad_code', '') and not is_state('sensor.keypad_code', 'unknown') and not is_state('sensor.keypad_code', 'unavailable') %}
               {{ 1 if this.state| int(0) == 0 else this.state| int(0) + 1 }}
-            {% elif trigger.entity_id == 'button.confirmed_code_alarm_keypad' and is_state('sensor.keypad_code','') or is_state('sensor.keypad_code','unknown') %}
-              {{ this.state| int(0)  }}
-            {% else  %}
+            {% elif trigger.entity_id == 'button.confirmed_code_alarm_keypad' and is_state('sensor.keypad_code', '') or is_state('sensor.keypad_code', 'unknown') %}
+              {{ this.state| int(0) }}
+            {% else %}
               0
             {% endif %}
 
@@ -41,23 +41,23 @@ template:
       - name: confirmed_code_alarm_keypad
         press:
           - variables:
-              code: >
+              code: >-
                 {% from 'alarm.jinja' import state_alarm %}
-                {{ (state_alarm()|from_json)['code']}}
-              alarm: >
+                {{ (state_alarm()|from_json)['code'] }}
+              alarm: >-
                 {% from 'alarm.jinja' import state_alarm %}
-                {{ (state_alarm()|from_json)['alarm']}}
+                {{ (state_alarm()|from_json)['alarm'] }}
           - choose:
 
               - alias: Disattiva allarme
                 conditions:
-                  - "{{states(alarm) != 'disarmed' }}"
+                  - "{{ states(alarm) != 'disarmed' }}"
                   - or:
-                    - "{{states('sensor.keypad_code')|int(0) == code|int(0) }}"
-                    - >
+                    - "{{ states('sensor.keypad_code')|int(0) == code|int(0) }}"
+                    - >-
                       {% from 'alarm.jinja' import state_alarm %}
                       {% set code_service = (state_alarm()|from_json)['code_service'] %}
-                      {{ states('sensor.keypad_code')|int(0) == code_service|int(0) and is_state('input_boolean.code_service','on')}} 
+                      {{ states('sensor.keypad_code')|int(0) == code_service|int(0) and is_state('input_boolean.code_service', 'on')}} 
                 sequence:
                   - service: alarm_control_panel.alarm_disarm
                     target:
@@ -67,8 +67,8 @@ template:
 
               - alias: Attiva allarme
                 conditions:
-                  - "{{states('sensor.keypad_code')|int(0) == code|int(0) }}"
-                  - "{{states(alarm) == 'disarmed' }}"
+                  - "{{ states('sensor.keypad_code')|int(0) == code|int(0) }}"
+                  - "{{ states(alarm) == 'disarmed' }}"
                 sequence:
                   - service: alarm_control_panel.alarm_arm_away
                     target:
@@ -78,7 +78,7 @@ template:
 
               - alias: Codice di emergenza per disattivare allarme ed inviare notifica di pericolo
                 conditions:
-                  - "{{states('sensor.keypad_code')|int(0) == states('sensor.emergency_code')|int(0) }}"
+                  - "{{ states('sensor.keypad_code')|int(0) == states('sensor.emergency_code')|int(0) }}"
                 sequence:
                   - alias: Evento creato per essere usato come trigger in altre automazioni
                     event: customizations
@@ -91,22 +91,22 @@ template:
                     data:
                       code: "{{ code }}"
                   - variables:
-                      message: >
-                        {{ "Attenzione è stato disattivato l'allarme con codice di emergenza alle " + (now().strftime("%H:%M"))|string}}
+                      message: >-
+                        {{ "Attenzione è stato disattivato l'allarme con codice di emergenza alle " + (now().strftime("%H:%M"))|string }}
                   - alias: Invia chiamata voip alle persone che NON si trovano in casa
                     event: customizations
                     event_data:
                       types: notify_alarm
                       notify: disattivato_con_codice_emergenza_solovoip
-                      message: "{{message}}"
-                      for_each: >
-                        {% from 'alarm.jinja' import person_alarm %}
+                      message: "{{ message }}"
+                      for_each: >-
+                        {% from 'personal.jinja' import persons %}
                         {% set output = namespace(state_home=[]) %}
-                          {%for dict in person_alarm()|from_json if states[dict.person].state != 'home' and dict.cellulare != 'none' %}
+                          {% for dict in persons()|from_json if states[dict.person].state != 'home' and dict.cellulare != 'none' %}
                             {# lista persone non in casa con numero cellulare associato #}
-                            {%- set output.state_home = output.state_home + [dict['cellulare'] ] -%}
+                            {% set output.state_home = output.state_home + [dict['cellulare']] %}
                           {% endfor %}
-                          {{output.state_home}}
+                          {{ output.state_home }}
                   - alias: Invia notifica PUSH alle persone che NON si trovano in casa
                     event: customizations
                     event_data:
@@ -114,20 +114,20 @@ template:
                       notify: disattivato_con_codice_emergenza_solopush
                       critical: 1.0
                       tag: control_code
-                      message:  "{{message}}"
-                      for_each: >
-                        {% from 'alarm.jinja' import person_alarm %}
+                      message:  "{{ message }}"
+                      for_each: >-
+                        {% from 'personal.jinja' import persons %}
                         {% set output = namespace(state_home=[]) %}
-                          {%for dict in person_alarm()|from_json if states[dict.person].state != 'home'%}
+                          {% for dict in persons()|from_json if states[dict.person].state != 'home' %}
                             {# lista persone non in casa #}
-                            {%- set output.state_home = output.state_home + ['notify.'+dict['notify'] ] -%}
+                            {% set output.state_home = output.state_home + ['notify.' + dict['notify']] %}
                           {% endfor %}
-                          {{output.state_home}}
+                          {{ output.state_home }}
                       action2: None
                       
               - alias: Controlla tentativi codice errato
                 conditions:
-                  - "{{ (states('sensor.counter_code_error_keypad')|int(0) > states('sensor.alarm_code_attempts')|int(0))}} "
+                  - "{{ (states('sensor.counter_code_error_keypad')|int(0) > states('sensor.alarm_code_attempts')|int(0)) }}"
                 sequence:
                   - alias: INVIA NOTIFICA
                     event: customizations
@@ -136,7 +136,7 @@ template:
                       critical: 1.0
                       tag: control_code
                       notify: tentativi_codici_superati
-                      message: "{{-'Allarme!!! Troppi tentativi di inserimento codice rilevati alle ore '+ (now().strftime('%H:%M'))|string -}}"
+                      message: "{{ 'Allarme!!! Troppi tentativi di inserimento codice rilevati alle ore ' + (now().strftime('%H:%M'))|string }}"
                       
 automation:
   - alias: "set code allarm button"
@@ -145,14 +145,14 @@ automation:
     mode: single
     trigger:
     - platform: template
-      value_template: >
+      value_template: >-
         {% from 'alarm.jinja' import state_alarm %}
-        {%set alarm = (state_alarm()|from_json)['alarm'] %}
-        {{ is_state(alarm,'triggered') and now() < states[alarm].last_changed+ timedelta(seconds=1)}}
+        {% set alarm = (state_alarm()|from_json)['alarm'] %}
+        {{ is_state(alarm, 'triggered') and now() < states[alarm].last_changed + timedelta(seconds=1) }}
     - platform: state
       entity_id: sensor.keypad_code
     action:
-      - if: "{{trigger.entity_id == 'sensor.keypad_code'}}"
+      - if: "{{ trigger.entity_id == 'sensor.keypad_code' }}"
         then:
           - service: button.press
             target:
