--- a/packages/alarm/skill_device/siren.yaml
+++ b/packages/alarm/skill_device/siren.yaml
@@ -15,28 +15,28 @@ automation:
   variables:
     alarm: >
       {% from 'alarm.jinja' import state_alarm %}
-      {{ (state_alarm()|from_json)['alarm']}}
+      {{ (state_alarm()|from_json)['alarm'] }}
   trigger:
     - platform: template
-      value_template: >
+      value_template: >-
         {% from 'alarm.jinja' import state_alarm %}
-        {%set alarm = (state_alarm()|from_json)['alarm'] %}
-        {{ is_state(alarm,'pending')  and now() < states[alarm].last_changed+ timedelta(seconds=1)}}
+        {% set alarm = (state_alarm()|from_json)['alarm'] %}
+        {{ is_state(alarm, 'pending')  and now() < states[alarm].last_changed + timedelta(seconds=1) }}
     - platform: template
-      value_template: >
+      value_template: >-
         {% from 'alarm.jinja' import state_alarm %}
-        {%set alarm = (state_alarm()|from_json)['alarm'] %}
-        {{ is_state(alarm,'triggered')  and now() < states[alarm].last_changed+ timedelta(seconds=1)}}
+        {% set alarm = (state_alarm()|from_json)['alarm'] %}
+        {{ is_state(alarm, 'triggered')  and now() < states[alarm].last_changed + timedelta(seconds=1) }}
     - platform: template
-      value_template: >
+      value_template: >-
         {% from 'alarm.jinja' import state_alarm %}
-        {%set alarm = (state_alarm()|from_json)['alarm'] %}
-        {{ is_state(alarm,'disarmed')  and now() < states[alarm].last_changed+ timedelta(seconds=1)}}
+        {% set alarm = (state_alarm()|from_json)['alarm'] %}
+        {{ is_state(alarm, 'disarmed')  and now() < states[alarm].last_changed + timedelta(seconds=1) }}
   action:
   - choose:
       - alias: Primo avviso sensore scattato
         conditions:
-          - "{{trigger.to_state.state == 'pending'}}"
+          - "{{ trigger.to_state.state == 'pending' }}"
         sequence:
         - service: switch.turn_on
           target:
@@ -48,12 +48,12 @@ automation:
             entity_id: *siren
       - alias: Allarme scattato
         conditions:
-          - "{{trigger.to_state.state == 'triggered'}}"
+          - "{{ trigger.to_state.state == 'triggered' }}"
         sequence:
           - repeat:
               until:
                 - condition: template
-                  value_template: "{{is_state(alarm , 'triggered')}}"
+                  value_template: "{{ is_state(alarm , 'triggered') }}"
               sequence:
                 - service: switch.turn_on
                   target:
@@ -63,7 +63,7 @@ automation:
               entity_id: *siren
       - alias: Allarme disattivato
         conditions:
-          - "{{trigger.to_state.state == 'disarmed'}}"
+          - "{{ trigger.to_state.state == 'disarmed' }}"
         sequence:
         - alias: Spegni sirena
           service: switch.turn_off
