--- a/packages/alarm/skill_device/cctv_alarm.yaml
+++ b/packages/alarm/skill_device/cctv_alarm.yaml
@@ -23,42 +23,42 @@ automation:
     value_template: >
       {% from 'alarm.jinja' import state_alarm %}
       {% set alarm = (state_alarm()|from_json)['alarm'] %}
-      {{  is_state(alarm,'triggered') }}
+      {{  is_state(alarm, 'triggered') }}
   action:
   - alias: Invia notifica push alle persone che NON si trovano in casa
     repeat:
-      count: "{{camera|count}}"
+      count: "{{ camera|count }}"
       sequence:
         - variables:
-            var_index: "{{repeat.index-1}}"
+            var_index: "{{ repeat.index - 1 }}"
         - parallel:
 
           - alias: Avvia registrazione camera
             service: camera.record
             data:
-              filename: "/config/www/immagini_allarme/{{states[camera[var_index]].object_id}}/{{now().strftime('%d-%m-%Y--%H:%M')}}.mp4"
+              filename: "/config/www/immagini_allarme/{{ states[camera[var_index]].object_id}}/{{now().strftime('%d-%m-%Y--%H:%M') }}.mp4"
               duration: 30
             target:
-              entity_id: "{{camera[var_index]}}"
+              entity_id: "{{ camera[var_index] }}"
           - alias: INVIA NOTIFICA
             event: customizations
             event_data:
               types: notify_alarm
               notify: cctv
               for_each: >
-                {% from 'alarm.jinja' import person_alarm %}
+                {% from 'personal.jinja' import persons %}
                 {% set output = namespace(state_home=[]) %}
-                  {%for dict in person_alarm()|from_json if states[dict.person].state != 'home'%}
-                    {%- set output.state_home = output.state_home + ['notify.'+dict['notify'] ] -%}
+                  {% for dict in persons()|from_json if states[dict.person].state != 'home' %}
+                    {% set output.state_home = output.state_home + ['notify.'+dict['notify'] ] %}
                   {% endfor %}
-                  {{output.state_home}}
+                  {{ output.state_home }}
               message: "{{ states[camera[var_index]].name }}"
               title: '---CCTV---'
               notification_icon: "mdi:cctv"
-              image: "/api/camera_proxy/{{camera[var_index]}}"
+              image: "/api/camera_proxy/{{ camera[var_index] }}"
               action1: "URI"
               title1: "Apri live"
-              uri1: "entityId:{{camera[var_index]}}"
+              uri1: "entityId:{{ camera[var_index] }}"
               action2: "URI"
               title2: "Apri Registrazione"
               uri2: "/media-browser/browser/%2Cmedia-source%3A%2F%2Fmedia_source%2Flocale%2Fimmagini_allarme"
