--- a/packages/alarm/skill_device/person_alarm.yaml
+++ b/packages/alarm/skill_device/person_alarm.yaml
@@ -12,18 +12,18 @@ homeassistant:
 alert:
   not_home_battery:
     name: Avviso batterie con allarme inserito
-    message: >
-      {% from 'alarm.jinja' import person_alarm %}
+    message: >-
+      {% from 'personal.jinja' import persons %}
       {% set output = namespace(state_home=[],state_battery=[]) %}
       {# imposta le persone in casa #}
-      {%for d in person_alarm()|from_json if states[d.person].state == 'home'%}
+      {% for d in persons()|from_json if states[d.person].state == 'home' %}
         {%- set output.state_home = output.state_home + [d['person'] ] -%}
       {% endfor %}
       {# controlla che in casa ci siano 0 persone ma batterie scariche #}
-      {%for d in person_alarm()|from_json if output.state_home|count == 0 and states[d.battery].state|int < 15%}
-        {%- set output.state_battery = output.state_battery + [states[d['person'] ].name] -%}
+      {% for d in persons()|from_json if output.state_home|count == 0 and states[d.battery].state|int < 15 %}
+        {%- set output.state_battery = output.state_battery + [states[d['person']].name] -%}
       {% endfor %}
-        {{'Attenzione allarme inserito con telefono di '+ output.state_battery|join(' e ')+' scarico.' }}
+        {{ 'Attenzione allarme inserito con telefono di ' + output.state_battery|join(' e ') + ' scarico.' }}
     entity_id: sensor.stato_famiglia_allarme
     state: "not_home_battery"
     repeat: 5
@@ -37,28 +37,28 @@ alert:
           title: "Ignora" 
     can_acknowledge: true
     notifiers: >
-      {% from 'alarm.jinja' import person_alarm %}
+      {% from 'personal.jinja' import persons %}
       {% set output = namespace(state_home=[]) %}
-        {%for dict in person_alarm()|from_json %}
-          {%- set output.state_home = output.state_home + ['notify.'+dict['notify'] ] -%}
+        {% for dict in persons()|from_json %}
+          {% set output.state_home = output.state_home + ['notify.' + dict['notify']] %}
         {% endfor %}
-      {{output.state_home}}
+      {{ output.state_home }}
 
 template:
   - sensor:
       - name: Stato famiglia allarme
-        state: >
-          {% from 'alarm.jinja' import person_alarm %}
+        state: >-
+          {% from 'personal.jinja' import persons %}
           {% from 'alarm.jinja' import state_alarm %}
           {% set output = namespace(state_home=[],state_battery=[]) %}
           {% set alarm = (state_alarm()|from_json)['alarm'] %}
-            {%for d in person_alarm()|from_json if states[d.person].state == 'home'%}
+            {% for d in persons()|from_json if states[d.person].state == 'home' %}
               {# lista persone in casa #}
-              {%- set output.state_home = output.state_home + [d['person'] ] -%}
+              {% set output.state_home = output.state_home + [d['person']] %}
             {% endfor %}
-            {%for d in person_alarm()|from_json if states[d.battery].state|int < 15%}
+            {% for d in persons()|from_json if states[d.battery].state|int < 15 %}
               {# lista persone con batteria scarica #}
-              {%- set output.state_battery = output.state_battery + [d['person'] ] -%}
+              {%- set output.state_battery = output.state_battery + [d['person']] -%}
             {% endfor %}
           {# una sola persona in casa con batteria scarica #}
           {% if output.state_home|count == 1  %}
@@ -67,10 +67,10 @@ template:
                 home_battery
               {% else %}
                 home
-              {% endif%}
+              {% endif %}
             {% endfor %}
           {# nessuno in casa ma una persona con batteria scarica #}
-          {% elif output.state_home|count == 0 and output.state_battery|count > 0 and is_state(alarm,'armed_away') and is_state('input_boolean.alarm_battery_mobile','on')%}
+          {% elif output.state_home|count == 0 and output.state_battery|count > 0 and is_state(alarm,'armed_away') and is_state('input_boolean.alarm_battery_mobile', 'on') %}
             not_home_battery
           {# almeno una persona in casa batteria ok #}
           {% elif output.state_home|count > 0 %}
@@ -80,7 +80,7 @@ template:
             not_home
           {% else %}
             sconosciuto
-          {%endif%}
+          {% endif %}
 
 input_boolean:
   alarm_battery_mobile:
@@ -96,9 +96,9 @@ automation:
   id: presence_allarm_auto
   initial_state: true
   variables:
-    alarm: >
+    alarm: >-
       {% from 'alarm.jinja' import state_alarm %}
-      {{ (state_alarm()|from_json)['alarm']}} 
+      {{ (state_alarm()|from_json)['alarm'] }} 
   trigger: 
   - platform: state
     entity_id: sensor.stato_famiglia_allarme
@@ -109,17 +109,17 @@ automation:
   action:
   - choose:
 
-    - alias: >
+    - alias: >-
         Imposta attivazione/disattivazione automatica in base alla presenza in casa. 
         Controlla che in casa ci sia solo una persona ed ha il cellulare scarico
       conditions: 
-         - "{{trigger.to_state.state == 'home_battery' and is_state('input_boolean.presence_person_active_alarm','on') and is_state(alarm,'disarmed') and trigger.from_state.state is defined}}"
+         - "{{ trigger.to_state.state == 'home_battery' and is_state('input_boolean.presence_person_active_alarm', 'on') and is_state(alarm, 'disarmed') and trigger.from_state.state is defined }}"
       sequence:
         - alias: Impedisci di inserire allarme globale per batteria scarica con 1 persona in casa
           service: input_boolean.turn_off
           target:
             entity_id: input_boolean.presence_person_active_alarm
-        - alias: >
+        - alias: >-
               Imposta il check INTERVENTO stato batteria con persona in casa in ON. Interviene solo se input_boolean.presence_person_active_alarm attivo
               Serve ad indicare che attivazione/disattivazione automatica è stata disattivata per batteria scarica
           service: input_boolean.turn_on
@@ -132,57 +132,57 @@ automation:
             notify: persona_in_casa_tel_scarico
             tag: state_alarm
             critical: 1.0
-            for_each: >
-              {% from 'alarm.jinja' import person_alarm %}
+            for_each: >-
+              {% from 'personal.jinja' import persons %}
               {% set output = namespace(state_home=[]) %}
-                {%for dict in person_alarm()|from_json if states[dict.person].state == 'home'%}
-                  {%- set output.state_home = output.state_home + ['notify.'+dict['notify'] ] -%}
+                {% for dict in persons()|from_json if states[dict.person].state == 'home' %}
+                  {% set output.state_home = output.state_home + ['notify.'+dict['notify']] %}
                 {% endfor %}
-                {{output.state_home}}
+                {{ output.state_home }}
             action1: None
             action2: None
-            message: >
-              {% from 'alarm.jinja' import person_alarm %}
-              {% for result in person_alarm()|from_json if states[result.person].state == 'home' and states[result.battery].state|int < 50 %}
-                {{'Mettere in carica il telefono di '+states[result.person].name+' batteria al ' +states[result.battery].state +' %. Attivazione automatica allarme disattivata'}}
+            message: >-
+              {% from 'personal.jinja' import persons %}
+              {% for result in persons()|from_json if states[result.person].state == 'home' and states[result.battery].state|int < 50 %}
+                {{ 'Mettere in carica il telefono di ' + states[result.person].name + ' batteria al ' + states[result.battery].state + ' %. Attivazione automatica allarme disattivata' }}
                 {% break %}
               {% endfor %}
-        - alias: >
+        - alias: >-
             Imposta il check INTERVENTO stato batteria con persona fuori casa che ha disattivato allarme in OFF 
           service: input_boolean.turn_off
           target:
             entity_id: input_boolean.not_home_battery_disarmed
 
-    - alias: > 
+    - alias: >-
         Togli allarme globale per famigliare tornata a casa e 
         controlla se attivazione/disattivazione automatica era stato disattivata per batteria scarica
       conditions:
-      - "{{trigger.to_state.state == 'home'}}"
+      - "{{ trigger.to_state.state == 'home' }}"
       sequence:
       - alias: Riabilita controllo presenza
-        if: "{{ is_state('input_boolean.check_active_presence_person_active_alarm','on')}}"
+        if: "{{ is_state('input_boolean.check_active_presence_person_active_alarm', 'on') }}"
         then:
           - alias: Ripristina attivazione/disattivazione allarme automatico in base alla presenza
             service: input_boolean.turn_on
             target:
               entity_id: input_boolean.presence_person_active_alarm
-          - alias: >
+          - alias: >-
               Imposta il check INTERVENTO stato batteria con persona in casa in OFF 
               Serve ad indicare che attivazione/disattivazione automatica è stata riattivata per più persone in casa o batteria ok
             service: input_boolean.turn_off
             target:
               entity_id: input_boolean.check_active_presence_person_active_alarm
       - alias: Disattiva allarme per rientro in casa
-        if: "{{ not (is_state(alarm,'disarmed') or is_state(alarm,'armed_night')) and is_state('input_boolean.presence_person_active_alarm','on')}}"
+        if: "{{ not (is_state(alarm, 'disarmed') or is_state(alarm, 'armed_night')) and is_state('input_boolean.presence_person_active_alarm', 'on') }}"
         then:
           - service: alarm_control_panel.alarm_disarm
             data:
-              code: >
+              code: >-
                 {% from 'alarm.jinja' import state_alarm %}
-                {{ (state_alarm()|from_json)['code']}}
+                {{ (state_alarm()|from_json)['code'] }}
             target:
-              entity_id: "{{ alarm}}"
-      - alias: >
+              entity_id: "{{ alarm }}"
+      - alias: >-
           Imposta il check INTERVENTO stato batteria con persona fuori casa che ha disattivato allarme in OFF 
         service: input_boolean.turn_off
         target:
@@ -190,12 +190,12 @@ automation:
 
     - alias: Inserisci allarme globale per famiglia fuori casa o disattivato modalità ospite con famiglia fuori casa
       conditions:
-      - "{{is_state('input_boolean.presence_person_active_alarm','on') and is_state(alarm,'disarmed') }}"
+      - "{{ is_state('input_boolean.presence_person_active_alarm', 'on') and is_state(alarm, 'disarmed') }}"
       - or: 
-          - "{{trigger.to_state.state == 'not_home' or (trigger.to_state.state == 'not_home_battery' and is_state('input_boolean.not_home_battery_disarmed','off')) }}"
-          - "{{trigger.id == 'disable_mode_guest' and is_state('sensor.stato_famiglia_allarme','not_home') or ( is_state('sensor.stato_famiglia_allarme','not_home_battery') and is_state('input_boolean.not_home_battery_disarmed','off')) }}"
+          - "{{ trigger.to_state.state == 'not_home' or (trigger.to_state.state == 'not_home_battery' and is_state('input_boolean.not_home_battery_disarmed', 'off')) }}"
+          - "{{ trigger.id == 'disable_mode_guest' and is_state('sensor.stato_famiglia_allarme', 'not_home') or ( is_state('sensor.stato_famiglia_allarme', 'not_home_battery') and is_state('input_boolean.not_home_battery_disarmed', 'off')) }}"
       sequence:
-      - if: "{{is_state('input_boolean.modo_ospite','on')}}"
+      - if: "{{ is_state('input_boolean.modo_ospite', 'on') }}"
         then: 
           - alias: INVIA NOTIFICA
             event: customizations
@@ -212,8 +212,8 @@ automation:
         else:
         - service: alarm_control_panel.alarm_arm_away
           target:
-            entity_id: "{{ alarm}}"
-        - alias: >
+            entity_id: "{{ alarm }}"
+        - alias: >-
             Imposta il check INTERVENTO stato batteria con persona fuori casa che ha disattivato allarme in OFF 
           service: input_boolean.turn_off
           target:
@@ -222,7 +222,7 @@ automation:
 - alias: Disattivazione automatica rietro familiare
   id: automatic_deactivation_of_family_reunion
   variables:
-    alarm: >
+    alarm: >-
       {% from 'alarm.jinja' import state_alarm %}
       {{ (state_alarm()|from_json)['alarm']}}
     door: *door
@@ -232,7 +232,7 @@ automation:
         *family
       from: "not_home"
       to: "home"
-  condition: "{{is_state( alarm , 'armed_night')}}"
+  condition: "{{ is_state( alarm , 'armed_night') }}"
   action:
     - alias: Invia notifica SOLO alla persona che rientra in casa
       event: customizations
@@ -240,22 +240,22 @@ automation:
         types: notify_alarm
         notify: rientro_in_casa_con_allarme_notte
         tag: state_person
-        for_each: >
-          {% from 'alarm.jinja' import person_alarm %}
+        for_each: >-
+          {% from 'personal.jinja' import persons %}
           {% set output = namespace(state_home=[]) %}
-            {%for dict in person_alarm()|from_json if dict['person'] == trigger.entity_id%}
-              {%- set output.state_home = output.state_home + ['notify.'+dict['notify'] ] -%}
+            {% for dict in persons()|from_json if dict['person'] == trigger.entity_id %}
+              {% set output.state_home = output.state_home + ['notify.'+dict['notify']] %}
             {% endfor %}
-            {{output.state_home}}
+            {{ output.state_home }}
         title: "--ALLARME RIENTRO--"
-        message: "{{trigger.to_state.name}}, disattivo l'allarme notte preventivamente per il tuo rientro."
+        message: "{{ trigger.to_state.name + ', disattivo l'allarme notte preventivamente per il tuo rientro.' }}"
     - service: alarm_control_panel.alarm_disarm
       data:
-        code: >
+        code: >-
           {% from 'alarm.jinja' import state_alarm %}
-          {{ (state_alarm()|from_json)['code']}}
+          {{ (state_alarm()|from_json)['code'] }}
       target:
-        entity_id: "{{ alarm}}"
+        entity_id: "{{ alarm }}"
     - wait_for_trigger:
         - platform: state
           entity_id: *door
@@ -267,4 +267,4 @@ automation:
         minutes: 5
     - service: alarm_control_panel.alarm_arm_night
       target:
-        entity_id: "{{ alarm}}"
+        entity_id: "{{ alarm }}"
