--- a/packages/alarm/skill_device/router_alarm.yaml
+++ b/packages/alarm/skill_device/router_alarm.yaml
@@ -1,7 +1,7 @@
 homeassistant:
   customize:
     package.node_anchors:
-        UPS: &ups binary_sensor.fritz_box_6890_lte_connection
+        router: &router binary_sensor.fritz_box_6890_lte_connection
 
 ##############################################################
 #         DA QUESTO PUNTO NON MODIFICARE
@@ -12,7 +12,7 @@ automation:
   id: internet.state
   trigger:
   - platform: state
-    entity_id: *ups
+    entity_id: *router
   action:
     - alias: INVIA NOTIFICA
       event: customizations
@@ -21,9 +21,9 @@ automation:
         notify: stato_router
         tag: stato_router
         title: --CONNESSIONE--
-        message: >
-          {% if trigger.to_state.state == 'on'  %} 
-            {{'Connessione internet tornata a funzionare alle '+ as_local(states[trigger.entity_id].last_changed).strftime("%H:%M")}}
-          {%else%} 
-            {{'Connessione Assente attivo fallback LTE dalle '+ as_local(states[trigger.entity_id].last_changed).strftime("%H:%M")}}
-          {%endif%}
+        message: >-
+          {% if trigger.to_state.state == 'on' %} 
+            {{ 'Connessione internet tornata a funzionare alle ' + as_local(states[trigger.entity_id].last_changed).strftime("%H:%M") }}
+          {% else %} 
+            {{ 'Connessione Assente attivo fallback LTE dalle ' + as_local(states[trigger.entity_id].last_changed).strftime("%H:%M") }}
+          {% endif %}
